<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btn_lec"
            android:layout_width="63dp"
            android:layout_height="75dp"
            android:layout_gravity="bottom|center"
            android:background="#00ff0000"
            android:scaleType="fitCenter"
            android:src="@drawable/b_etc"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"/>

        //강의동 리스트 레이아웃

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:background="@drawable/layout_background"
            android:columnCount="2"
            android:orientation="vertical"
            android:rowCount="6">

            <Button
                android:id="@+id/busStop1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:onClick="onClick"
                android:text="@string/bus1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/busStop2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:onClick="onClick"
                android:text="@string/bus2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/busStop3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:onClick="onClick"
                android:text="@string/bus3"
                android:textSize="20sp" />

            <Button
                android:id="@+id/busStop4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="#00ff0000"
                android:onClick="onClick"
                android:text="@string/bus4"
                android:textSize="20sp" />

            <Button
                android:id="@+id/busStop5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="#00ff0000"
                android:onClick="onClick"
                android:text="@string/bus5"
                android:textSize="20sp" />

            <Button
                android:id="@+id/busStop6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="#00ff0000"
                android:onClick="onClick"
                android:text="@string/bus6"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_etc1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="#00ff0000"
                android:onClick="onClick"
                android:text="@string/etc1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_etc2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="#00ff0000"
                android:onClick="onClick"
                android:text="@string/etc2"
                android:textSize="20sp" />

        </GridLayout>
    </LinearLayout>


</RelativeLayout>