<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/professor">
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btn_pro"
            android:layout_width="63dp"
            android:layout_height="75dp"
            android:layout_gravity="bottom|center"
            android:background="#00ff0000"
            android:scaleType="fitCenter"
            android:src="@drawable/b_pro"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"/>

        //강의동 리스트 레이아웃

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="404dp"
            android:layout_gravity="center"
            android:layout_marginBottom="120dp"
            android:background="@drawable/layout_background"
            android:columnCount="1"
            android:orientation="horizontal"
            android:scrollbars="vertical">

            <Button
                android:id="@+id/pro01"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onClick"
                android:text="@string/pro01"
                android:textSize="20sp" />

            <Button
                android:id="@+id/pro02"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onClick"
                android:text="@string/pro02"
                android:textSize="20sp" />

            <Button
                android:id="@+id/pro03"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onClick"
                android:text="@string/pro03"
                android:textSize="20sp" />

            <Button
                android:id="@+id/pro04"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#00ff0000"
                android:onClick="onClick"
                android:text="@string/pro04"
                android:textSize="20sp" />

            <Button
                android:id="@+id/pro05"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#00ff0000"
                android:onClick="onClick"
                android:text="@string/pro05"
                android:textSize="20sp" />

            <Button
                android:id="@+id/pro06"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#00ff0000"
                android:onClick="onClick"
                android:text="@string/pro06"
                android:textSize="20sp" />

            <Button
                android:id="@+id/pro07"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#00ff0000"
                android:onClick="onClick"
                android:text="@string/pro07"
                android:textSize="20sp" />


        </GridLayout>
    </LinearLayout>


</RelativeLayout>